# KRNL-Helper

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
examples/: disabled.json  krnl.json  record_only.json
krnl_helper/: __main__.py  cli.py  config.py  log.py  statics.py  weather.py
krnl_helper/music/: __init__.py  base.py  mac.py
krnl_helper/music/jxa/: addSongToPlaylist.jxa  clearSongsFromPlaylist.jxa  deletePlaylist.jxa  getAllPlaylists.jxa  getAllSongsInPlaylist.jxa  getCurrentPosition.jxa  getCurrentSong.jxa  makePlaylist.jxa  playPlaylist.jxa  setPlaylistDescription.jxa
krnl_helper/music/mac/: apple_music.py  mac.py  spotify.py
krnl_helper/network/: __init__.py  __main__.py  client.py  server.py  utils.py
krnl_helper/recording/: __init__.py
krnl_helper/schedule/: __init__.py
krnl_helper/ui/: __init__.py  log_renderable.py  schedule_renderable.py  timings_renderable.py  weather_renderable.py
krnl_helper/weather/: __init__.py  base.py  services.py
tests/music/: test_base.py  test_mac.py
