[tool.poetry]
name = "krnl-helper"
version = "0.1.0"
description = ""
authors = ["Mark Smith <totallynotmark6@gmail.com>"]
readme = "README.md"
packages = [{include = "krnl_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krnl-helper = "krnl_helper.cli:cli"
