[tool.poetry]
name = "krnl-helper"
version = "0.1.0"
description = ""
authors = ["Mark Smith <totallynotmark6@gmail.com>"]
readme = "README.md"
packages = [{include = "krnl_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
rich = "^13.0.0"
typer = "^0.6.1"
mnemonicode = "^1.4.5"
attrs = "^22.1.0"
Pint = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.990"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.3"
pycln = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krnl-helper = "krnl_helper.cli:cli"

[tool.pycln]
all = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
